--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Playfair", sans-serif;
+  font-family: "Playfair";
   scroll-behavior: smooth;
   color-scheme: dark;
 }
